fixed nav bar not stretching

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 /******************** GENERAL CSS SETTINGS *******************/
 .main-interface{
     width: 100%;
-    height: 100vh;
+    height: auto;
     min-height: 100vh;
     /*overflow: hidden;*/
 
